# ChangeLog for sys-apps/coreutils
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.179 2006/09/30 20:54:49 vapier Exp $

*coreutils-6.3 (30 Sep 2006)

  30 Sep 2006; Mike Frysinger <vapier@gentoo.org> +coreutils-6.3.ebuild:
  Version bump.

*coreutils-6.2 (18 Sep 2006)

  18 Sep 2006; Mike Frysinger <vapier@gentoo.org> +coreutils-6.2.ebuild:
  Version bump.

  04 Sep 2006; Diego Pettenò <flameeyes@gentoo.org> coreutils-5.97.ebuild,
  coreutils-6.1.ebuild:
  Backport the kernel_linux fix to 5.97 and drop keyword from 6.1 as it
  doesn't build right now.

  04 Sep 2006; Diego Pettenò <flameeyes@gentoo.org> coreutils-6.1.ebuild:
  Remove kernel_linux conditional for acl and attr, acl can be use.masked for
  this package on non-linux profiles now.

*coreutils-6.1 (20 Aug 2006)

  20 Aug 2006; Mike Frysinger <vapier@gentoo.org> +coreutils-6.1.ebuild:
  Version bump.

  06 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> coreutils-5.96.ebuild,
  coreutils-5.97.ebuild:
  Drop keyword from old version, and make acl deps being actual dep only on
  Linux. *BSD does not require those deps although acl works fine.

*coreutils-5.97 (25 Jun 2006)

  25 Jun 2006; Mike Frysinger <vapier@gentoo.org> +coreutils-5.97.ebuild:
  Version bump.

  01 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> coreutils-5.96.ebuild:
  Restrict confcache as per bug #134459.

  23 May 2006; Diego Pettenò <flameeyes@gentoo.org> coreutils-5.96.ebuild:
  Add ~x86-fbsd keyword. Change strategy for non-GNU userlands, instead of
  prefixing with 'g' (that might collide with other binaries as in FreeBSD),
  install in /usr/libexec/gnu. Don't force external regex on
  non-glibc/non-uclibc systems. Remove man pages when on non-GNU userland as
  they would collide with system's manpages.

*coreutils-5.96 (22 May 2006)

  22 May 2006; Mike Frysinger <vapier@gentoo.org> +coreutils-5.96.ebuild:
  Version bump.
