@@ -12,20 +12,20 @@ RMD160 9f93b01325d5b073ea32a8df969b24c4a6879eea files/coreutils-5.94-darwin7.pat
 SHA256 e029f905824d0ca547e6ee48d65b1d493bc9d55f2cd716cab7ed5d7afd936ee1 files/coreutils-5.94-darwin7.patch 810
 DIST coreutils-5.94-patches-1.5.tar.bz2 65180 RMD160 c2e7c4632cc8c4ea9d01bb85a371212e6af4600a SHA1 68024334e6d25d378b74ca67ece8d93ff295f56d SHA256 f3b53c8a1175e5d5f8f233e03b41137e5fa35b0cd581dca6207958776af7b316
 DIST coreutils-5.94.tar.bz2 5047523 RMD160 c3620710beea1b8d604210bdec8fbe0a3da892ab SHA1 c39add02995304e1cf3dfc8543702f22155fba50 SHA256 5942f8ba08e0e2faf425d2c0dc62688b1253166c51b170ca1580db5a0b984d5c
-DIST coreutils-6.3-patches-1.0.tar.bz2 48130 RMD160 381ead47c1a48d18da6bb6d8cdd3b8dc499f25ae SHA1 86709f46b5eaebbc9bece44345e4b9731d82a376 SHA256 8e85d0826703c73bc20558ec6ee66f8adeaa96db5969247055553103176a0f25
-DIST coreutils-6.3.tar.bz2 5071144 RMD160 114911667800cb1d96de967963172091ea5da50c SHA1 3e042447b4674f4527965e5aee38f85c2c38a9de SHA256 8815a918867a14dcfeb623786b3a7f7483a039a78dd5a94e9b562667684c07a1
+DIST coreutils-6.4-patches-1.0.tar.bz2 47993 RMD160 122882cf72088c7abaff96bff9220efddfc6b1d7 SHA1 dab3b74d668ddcc43c74d41769782460f8bf387e SHA256 daf083f0d37a8988aadb6e2fe030481add139f1cb2f9cfc60b9b62241ff459bc
+DIST coreutils-6.4.tar.bz2 5294210 RMD160 5e3628115ea814cddcfc6630a77c9079bd8676e0 SHA1 b93484cdd4bad11d6c60a015bf57b679849816d1 SHA256 75a6b82bb7e3d07bec5b9bd0fcdfdfdfb88f32728e5089972001b50e4148b87b
 EBUILD coreutils-5.94-r3.ebuild 4929 RMD160 6e0929ce4945433aa4b465673c80c5a9878c9dcf SHA1 15edbbf02e83d8cd877d3f42dd87aeb79c0ee2ad SHA256 1336bc0691f882ce770d472fb08af08e86f30ecf00d78db92d6482f78193c22c
 MD5 8c474346db64891a3fbf0e20d92df21d coreutils-5.94-r3.ebuild 4929
 RMD160 6e0929ce4945433aa4b465673c80c5a9878c9dcf coreutils-5.94-r3.ebuild 4929
 SHA256 1336bc0691f882ce770d472fb08af08e86f30ecf00d78db92d6482f78193c22c coreutils-5.94-r3.ebuild 4929
-EBUILD coreutils-6.3.ebuild 4727 RMD160 d4e77ddc37079c5e9fdce5d10b2f51053ba5144a SHA1 0eadb5bf5b2f04adef5383a2e4607077542d7868 SHA256 fd84090b302bfbc77e53e3f682b1b8c8df4bfcdaee2874b950f572f68bbc30e6
-MD5 8f214ad5ed851f0b665d56f886b63387 coreutils-6.3.ebuild 4727
-RMD160 d4e77ddc37079c5e9fdce5d10b2f51053ba5144a coreutils-6.3.ebuild 4727
-SHA256 fd84090b302bfbc77e53e3f682b1b8c8df4bfcdaee2874b950f572f68bbc30e6 coreutils-6.3.ebuild 4727
-MISC ChangeLog 28358 RMD160 981e18759ce3d3c617045367464ef5d9ad3f18f1 SHA1 9197ed432ba5675773f79e49c4fa242a3756a6c3 SHA256 08a83a7bdb6a8d033e52db25542e503db6c90a5a8deb16dae24fa41c540054c8
-MD5 972eb2cf95beccaeb67be2424177d85d ChangeLog 28358
-RMD160 981e18759ce3d3c617045367464ef5d9ad3f18f1 ChangeLog 28358
-SHA256 08a83a7bdb6a8d033e52db25542e503db6c90a5a8deb16dae24fa41c540054c8 ChangeLog 28358
+EBUILD coreutils-6.4.ebuild 4635 RMD160 e053ef4f37e29bd65044cbc84eedb5daab358405 SHA1 cac6d6126b374c08813ac9810b957c82d013129e SHA256 4baa5a28dd158ba3b01941bcb94eb7e0d3c708481eddb3195a7658780a931b7e
+MD5 085f600058263942d8ecb787b35187d4 coreutils-6.4.ebuild 4635
+RMD160 e053ef4f37e29bd65044cbc84eedb5daab358405 coreutils-6.4.ebuild 4635
+SHA256 4baa5a28dd158ba3b01941bcb94eb7e0d3c708481eddb3195a7658780a931b7e coreutils-6.4.ebuild 4635
+MISC ChangeLog 28694 RMD160 0a667aeedd5a58708b3b9de9168cac7aeb7f100c SHA1 52446f4462d47017ef081c8c73861065c30035b2 SHA256 3363e9c839cf0aadcc50554f951fd6c0ed57f0f3c91ce8f39b30711966940b19
+MD5 f70c845bf6082f3b45c8decfd7806069 ChangeLog 28694
+RMD160 0a667aeedd5a58708b3b9de9168cac7aeb7f100c ChangeLog 28694
+SHA256 3363e9c839cf0aadcc50554f951fd6c0ed57f0f3c91ce8f39b30711966940b19 ChangeLog 28694
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
@@ -33,6 +33,6 @@ SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 metadata
 MD5 d0fa1dd1413e3086fba145959be32580 files/digest-coreutils-5.94-r3 530
 RMD160 eae3f26f9a952fd0855e57e15a72110ca75ed9b0 files/digest-coreutils-5.94-r3 530
 SHA256 67a3650bb7586f18ea135ddf4febd44f0b72516dba20aff7bd0c271b6eb7b10e files/digest-coreutils-5.94-r3 530
-MD5 4728d2ee43cc38dfc573c5393db52372 files/digest-coreutils-6.3 524
-RMD160 29bff5e9ebb36d9e7fbadab20fba35e9247e0fdf files/digest-coreutils-6.3 524
-SHA256 0762d074219cab6a188b6b1582b9f6d456ef43c99143495a1d43fffe99cc1cc1 files/digest-coreutils-6.3 524
+MD5 67478b3ad9a07d4c97e272dd51c6ac17 files/digest-coreutils-6.4 524
+RMD160 8201f3c3a0f7efec6c3b02db99810c4493b6ed9f files/digest-coreutils-6.4 524
+SHA256 bdaa6b3e2cbd8bb7063828d82bd6c8217bdcfa38f55fa2196799a5484561750d files/digest-coreutils-6.4 524
