@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/coreutils-6.3.ebuild,v 1.1 2006/09/30 20:54:49 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/coreutils-6.4.ebuild,v 1.5 2006/11/04 13:41:46 jer Exp $
 
 EAPI="prefix"
 
@@ -13,13 +13,11 @@ SRC_URI="ftp://alpha.gnu.org/gnu/coreutils/${P}.tar.bz2
 	mirror://gnu/${PN}/${P}.tar.bz2
 	mirror://gentoo/${P}.tar.bz2
 	mirror://gentoo/${P}-patches-${PATCH_VER}.tar.bz2
-	http://dev.gentoo.org/~vapier/dist/${P}-patches-${PATCH_VER}.tar.bz2
-	http://dev.gentoo.org/~kingtaco/mirror/${P}-patches-${PATCH_VER}.tar.bz2"
+	http://dev.gentoo.org/~vapier/dist/${P}-patches-${PATCH_VER}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-#KEYWORDS="~amd64 ~ppc-macos ~x86 ~x86-macos"
-KEYWORDS="-*"
+KEYWORDS="~amd64 ~ppc-macos ~x86 ~x86-macos"
 IUSE="acl nls selinux static"
 
 RDEPEND="selinux? ( sys-libs/libselinux )
