@@ -1,6 +1,0 @@
-MD5 90a44a1b74e0c6dd46881a0eb29bd5e6 coreutils-6.3-patches-1.0.tar.bz2 48130
-RMD160 381ead47c1a48d18da6bb6d8cdd3b8dc499f25ae coreutils-6.3-patches-1.0.tar.bz2 48130
-SHA256 8e85d0826703c73bc20558ec6ee66f8adeaa96db5969247055553103176a0f25 coreutils-6.3-patches-1.0.tar.bz2 48130
-MD5 065e9662c5aa2694693910ca9e6c9ec8 coreutils-6.3.tar.bz2 5071144
-RMD160 114911667800cb1d96de967963172091ea5da50c coreutils-6.3.tar.bz2 5071144
-SHA256 8815a918867a14dcfeb623786b3a7f7483a039a78dd5a94e9b562667684c07a1 coreutils-6.3.tar.bz2 5071144
