@@ -1,0 +1,6 @@
+MD5 2b7ce2e4a4134cc86c09b249e84311d5 coreutils-6.4-patches-1.0.tar.bz2 47993
+RMD160 122882cf72088c7abaff96bff9220efddfc6b1d7 coreutils-6.4-patches-1.0.tar.bz2 47993
+SHA256 daf083f0d37a8988aadb6e2fe030481add139f1cb2f9cfc60b9b62241ff459bc coreutils-6.4-patches-1.0.tar.bz2 47993
+MD5 a3806c709c7f063b80612be846a9d88c coreutils-6.4.tar.bz2 5294210
+RMD160 5e3628115ea814cddcfc6630a77c9079bd8676e0 coreutils-6.4.tar.bz2 5294210
+SHA256 75a6b82bb7e3d07bec5b9bd0fcdfdfdfb88f32728e5089972001b50e4148b87b coreutils-6.4.tar.bz2 5294210
